# rust-embedded-template

./: Cargo.toml  README.md  build.rs  cargo-generate.toml  flasher.py  linker.ld  linker_low_stack.ld  runner.py
.cargo/: config.toml
doc/: howto_detailed_setup.md
src/: main.rs  startup_stm32g431.rs
